Correção de português na web

--- a/index.html
+++ b/index.html
@@ -111,49 +111,49 @@
                                 utilizando Cypress, Selenium, Capybara.
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
                                 Manutenção na automação de sistemas WEB utilizando Cypress, Selenium, Capybara.
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB Testes
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
                                 Manuais e reporte de bug’s com o Redmine, Jira, Kanban, Planner, Trello.
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
                                 Reportando melhorias de funcionalidade para os sistemas da Policia Federal para a
                                 melhor usabilidade dos clientes.
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB Testes
+                                <span class="fa-li"><i class="fas fa-check"></i></span>Testes
                                 Mobile manuais
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
                                 Levantamento de casos de testes.
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB Testes
+                                <span class="fa-li"><i class="fas fa-check"></i></span> Testes
                                 de Usabilidade
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB
+                                <span class="fa-li"><i class="fas fa-check"></i></span> 
                                 BDD(Behavior Driven Development)
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB
+                                <span class="fa-li"><i class="fas fa-check"></i></span> 
                                 Análise de requisitos de software ajudando o PO em alteração de Regras de negócio.
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB
+                                <span class="fa-li"><i class="fas fa-check"></i></span> 
                                 Treinamento de novos colaboradores para automação de software e processos de testes.
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB
+                                <span class="fa-li"><i class="fas fa-check"></i></span> 
                                 Auxilio de correção de provas, entrevistas, criação de conteúdos e organização do
                                 Hackathon de testes - Stefanini 2022.
                             </li>
                             <li>
-                                <span class="fa-li"><i class="fas fa-check"></i></span> Automação de sistemas WEB
+                                <span class="fa-li"><i class="fas fa-check"></i></span> 
                                 Criação de testes automatizados para diversos projetos e criação de Sistemas, junto
                                 ao meu gestor.
                             </li>
