--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#boas-vindas">Boas Vindas</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiência</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Formação</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre">Sobre</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experiencia">Experiência</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#formacao">Formação</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#vivencias">Vivências</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#conhecimentos">Conhecimentos</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projetos">Projetos</a></li>
@@ -68,7 +68,7 @@
             </div>
         </section>
         <hr class="m-0" />
-        <section class="resume-section" id="about">
+        <section class="resume-section" id="sobre">
             <div class="resume-section-content">
 
                 <h3 class="mb-0">
@@ -97,7 +97,7 @@
         </section>
         <hr class="m-0" />
 
-        <section class="resume-section" id="experience">
+        <section class="resume-section" id="experiencia">
             <div class="resume-section-content">
                 <h2 class="mb-5 text-custom">Experiência </h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -168,7 +168,7 @@
         </section>
         <hr class="m-0" />
 
-        <section class="resume-section" id="education">
+        <section class="resume-section" id="formacao">
             <div class="resume-section-content">
                 <h2 class="mb-5 text-custom">Formação</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
