Atualização de certificações

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span> 
                                 Criação de testes automatizados para diversos projetos e criação de Sistemas, junto
-                                ao meu gestor.
+                                ao arquiteto de testes.
                             </li>
                         </p>
                     </div>
@@ -178,6 +178,11 @@
 
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><b>Julho 2020 - junho 2022</b></span></div>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Scrum Foundation Professional Certificate</h3>
+                        <div class="subheading mb-3">Ensino Superior de Análise e Desenvolvimento de Sistemas</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary"><b>Maio 2022 - Maio 2024</b></span></div>
                 </div>
 
         </section>
