--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
         <section class="resume-section" id="projetos">
             <div class="resume-section-content">
                 <h2 class="mb-5 text-custom">Projetos de Automação WEB</h2>
+                Até o presente momento os projetos estão sendo atualizados e serão upados posteriormente, no momento os links não levam a lugar nenhum.
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                         <div class="card h-100">
